sumo/tests/traci/VariableRetrieval/Vehicle/errors/UnknownID/testclient.prog
simstep 5 1
getvariable 0xa4 0x40 xxx
simstep 6 1
